# partner-onboarding-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/media/: cli-run.tape
mock_portal/: main.py
src/onboarding/: cli.py  content.py  graph.py  nodes.py  pdf.py  state.py  tracing.py  webhook.py
templates/: welcome_packet.html
tests/: conftest.py  test_content.py  test_graph_e2e.py  test_mock_portal.py  test_pdf.py
