[project]
name = "partner-onboarding-agent"
version = "0.1.0"
description = "LangGraph agent that takes a signed B2B partner from contract to operational in under 7 days."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "b2b-agent-toolkit",
    "langgraph>=0.2.40",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-anthropic>=0.2",
    "anthropic>=0.39",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "langfuse>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "httpx>=0.27",
]

[project.scripts]
onboard = "onboarding.cli:app"
mock-portal = "mock_portal.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onboarding", "mock_portal"]

[tool.uv.sources]
b2b-agent-toolkit = { path = "../b2b-agent-toolkit", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
